# bobo

./: .gitignore  AGENTS.template.md  README.md  bobo.py  pyproject.toml
bobo/: __init__.py  agents.py  cli.py  common.py  handoffs.py  llm.py  orchestration.py  projects.py  tools.py  ui.py  workspace.py
bobo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bobo/chat/: __init__.py  models.py  runner.py  service.py  store.py
bobo/providers/: __init__.py  base.py  bedrock.py  openrouter.py
examples/: agent_claim_call.json  agent_handoff_call.json  handoff_payload.json  software_team.json
tests/: test_bobo.py  test_chat.py  test_orchestration.py  test_projects.py  test_providers.py  test_ui.py
